--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body{
 }
 .header.sticky{
     background-color: #f5d9d5;
+    
 } 
 .logo{
     position: relative;
@@ -100,7 +101,7 @@ section{
 
 .intro2 .name{
    font-family: 'Sacramento', cursive;
-   font-size: 5.5rem;
+   font-size: 3.5rem;
 }
 .btn-box{
     position: relative;
@@ -217,7 +218,7 @@ span{
 }
 .about-image img{
     width:90% ;
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
 .about-content{
     text-align: center;
@@ -337,6 +338,9 @@ span{
 }
 .skills-column:nth-child(2) .skills-content .progress:nth-child(3) .bar span{
     width:65%;
+}
+.skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span{
+    width:90%;
 }
 .education{
     display: flex;
@@ -561,11 +565,11 @@ span{
   .navbar .animate,
   #menu-icon .animate,
   .home.show-animate .animate{
-     animation: showRight 1s ease forwards;
+     animation: showRight 1.2s ease forwards;
      animation-delay:calc(.3s * var(--i)) ;
   }
   .animate.scroll{
-    transition: 1s ease;
+    transition: 3s ease;
     transition-delay:calc(.3s / var(--i));
     animation: none;
   }
